<resources>
    <string name="app_name" translatable="true">MeditationHub</string>
    <string name="ContDescrip_download_meditation" translatable="true">Download meditation</string>
    <string name="download_denied" translatable="true">Please give MeditationHub permission to write to your storage</string>
    <string name="download_blocked" translatable="true">The writing permission has been blocked. The file cannot be downloaded.</string>
    <string name="thumb_contDescrip" translatable="true">cover art of the meditation</string>
    <string name="play_pause_button_contDescrip" translatable="true">play/pause button</string>
    <string name="stop_button_contDescrip" translatable="true">stop button</string>
    <string name="download_error" translatable="true">An error occurred downloading the file</string>
    <string name="med_image_transition" translatable="true">Meditation Image</string>
    <string name="med_title_transition" translatable="true">Meditation Title</string>
    <string name="med_subtitle_transition" translatable="true">Meditation Subtitle</string>
    <string name="background" translatable="true">background</string>
    <string name="remove" translatable="true">Remove\u0020</string>
    <string name="alert_title" translatable="true">Remove %1$s from your device?</string>
    <string name="alert_text" translatable="true">The file can be downloaded again at a later time.</string>
    <string name="ok" translatable="true">OK</string>
    <string name="cancel" translatable="true">cancel</string>
    <string name="remove_contDescrip" translatable="true">remove from device</string>

    <string name="header_foundation">Foundational Meditations</string>
    <string name="header_walk">Walking Meditations</string>
    <string name="header_botec">Blessing Of The Energy Centers</string>
    <string name="header_advanced">Advanced Meditations</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="menu_title_settings">Settings</string>
    <string name="pref_key_time_delay">Time Delay Key</string>
    <string name="pref_default_time_delay">0</string>
    <string name="pref_dnd_switch_key">DND Switch Key</string>


    <string name="text_value_radio_notification" translatable="false">Radio</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="delay_message">Your meditation will begin in %1$s seconds.</string>
    <string name="download_snack">Downloading:</string>
    <string name="no_internet">No Internet</string>
    <string name="remove_audio_toast">A long click will remove the audio of a meditation from your device. However, this one is not on yur device.</string>
    <string name="viewing_online_meds">Go online to view the meditations you have not downloaded yet.</string>
    <string name="pref_offline_switch_key">Offline Switch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
