<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/media_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/thumb_iv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumb_contDescrip"
            android:scaleType="fitCenter"
            android:fadingEdge="horizontal|vertical"
            android:fadingEdgeLength="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/title_tv"
            style="@style/text"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/subtitle_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Title of the Meditation" />

        <TextView
            android:id="@+id/subtitle_tv"
            style="@style/text"
            android:textStyle="italic"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/progress_sb"
            app:layout_constraintEnd_toEndOf="@+id/title_tv"
            app:layout_constraintStart_toStartOf="@+id/title_tv"
            tools:text="Subtitle of the Meditation" />

        <ImageButton
            android:id="@+id/play_pause_bt"
            style="@style/button"
            android:contentDescription="@string/play_pause_button_contDescrip"
            android:src="@android:drawable/ic_media_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stop_bt"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/progress_sb" />

        <ImageButton
            android:id="@+id/stop_bt"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="@dimen/margin_std"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/stop_button_contDescrip"
            app:layout_constraintBottom_toBottomOf="@+id/play_pause_bt"
            app:layout_constraintEnd_toEndOf="@+id/progress_sb"
            app:layout_constraintStart_toEndOf="@+id/play_pause_bt"
            app:layout_constraintTop_toTopOf="@+id/play_pause_bt" />

        <TextView
            android:id="@+id/position_tv"
            style="@style/text.time"
            android:layout_margin="@dimen/margin_std"
            app:layout_constraintBottom_toBottomOf="@+id/progress_sb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_tv"
            tools:text="0:00" />

        <TextView
            android:id="@+id/duration_tv"
            style="@style/text.time"
            android:layout_margin="@dimen/margin_std"
            app:layout_constraintBottom_toBottomOf="@+id/progress_sb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progress_sb"
            tools:text="0:00" />

        <SeekBar
            android:id="@+id/progress_sb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/margin_std"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/play_pause_bt"
            app:layout_constraintEnd_toStartOf="@+id/duration_tv"
            app:layout_constraintStart_toEndOf="@+id/position_tv" />

    </android.support.constraint.ConstraintLayout>
</layout>